--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dicebear/collection": "^9.2.2",
     "@dicebear/converter": "^9.2.2",
     "@dicebear/core": "^9.2.2",
+    "@vercel/analytics": "^1.5.0",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
