--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
+    "lucide-react": "^0.513.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
